# scixtracerapp

./: CMakeLists.txt  README.md
cmake/: Doxyfile.in  scixtracerappBuild.cmake  scixtracerappConfig.cmake.in  scixtracerappDependencies.cmake  scixtracerappSetTestEnvironment.cmake.in  scixtracerappUse.cmake.in
include/: scixtracerapp  sxframework  sxhome  sxwidgets
src/: CMakeLists.txt
src/scixtracerapp/: CMakeLists.txt  SxExperimentComponent.cpp  SxExperimentComponent.h  SxExperimentContainer.cpp  SxExperimentContainer.h  SxExperimentCreateComponent.cpp  SxExperimentCreateComponent.h  SxExperimentCreateContainer.cpp  SxExperimentCreateContainer.h  SxExperimentCreateStates.cpp  SxExperimentCreateStates.h  SxExperimentDataSetListComponent.cpp  SxExperimentDataSetListComponent.h  SxExperimentDataSetViewComponent.cpp  SxExperimentDataSetViewComponent.h  SxExperimentImportComponent.cpp  SxExperimentImportComponent.h  SxExperimentImportContainer.cpp  SxExperimentImportContainer.h  SxExperimentImportDirectoryDataComponent.cpp  SxExperimentImportDirectoryDataComponent.h  SxExperimentImportSingleDataComponent.cpp  SxExperimentImportSingleDataComponent.h  SxExperimentStates.cpp  SxExperimentStates.h  SxExperimentTagComponent.cpp  SxExperimentTagComponent.h  SxExperimentTagContainer.cpp  SxExperimentTagContainer.h  SxExperimentTagsListComponent.cpp  SxExperimentTagsListComponent.h  SxExperimentTagsUsingNameComponent.cpp  SxExperimentTagsUsingNameComponent.h  SxExperimentTagsUsingSeparatorsComponent.cpp  SxExperimentTagsUsingSeparatorsComponent.h  SxExperimentToolbarComponent.cpp  SxExperimentToolbarComponent.h  SxExperimentWidget.cpp  SxExperimentWidget.h  SxMetadataExperimentComponent.cpp  (+25 more)
src/sxframework/: CMakeLists.txt  SxAction.cpp  SxAction.h  SxActuator.cpp  SxActuator.h  SxComponent.cpp  SxComponent.h  SxContainer.cpp  SxContainer.h  SxModel.cpp  SxModel.h  SxStates.cpp  SxStates.h  SxfAction.cpp  SxfAction.h  SxfActuator.cpp  SxfActuator.h  SxfComponent.cpp  SxfComponent.h  SxfContainer.cpp  SxfContainer.h  SxfModel.cpp  SxfModel.h  SxfObject.cpp  SxfObject.h  SxfStates.cpp  SxfStates.h
src/sxhome/: CMakeLists.txt  SxHomeComponent.cpp  SxHomeComponent.h  SxHomeNavbarWidget.cpp  SxHomeNavbarWidget.h  SxHomeTileInfo.cpp  SxHomeTileInfo.h  SxHomeTileWidget.cpp  SxHomeTileWidget.h  SxHomeWidget.cpp  SxHomeWidget.h
src/sxwidgets/: CMakeLists.txt  SxButton.cpp  SxButton.h  SxClickableIcon.cpp  SxClickableIcon.h  SxClosableButton.cpp  SxClosableButton.h  SxFlowLayout.cpp  SxFlowLayout.h  SxHideableWidget.cpp  SxHideableWidget.h  SxSlidingStackedWidget.cpp  SxSlidingStackedWidget.h  SxTagWidget.cpp  SxTagWidget.h
tools/: CMakeLists.txt
tools/scixtracerapp/: CMakeLists.txt  demo.cpp
tools/sxhome/: CMakeLists.txt  demo.cpp
tools/theme/dark/: meanfilter.xml  stylesheet.css
tools/theme/default/: Thumbs.db  stylesheet.css
